# alphadate

./: README.md
backend/: .env  .gitignore  Cargo.toml  README.md
backend/docs/alphabet/: add_idea.md  all.md  all_base.md  create.md  delete.md  id.md  remove_idea.md  toggle_complete.md  update.md
backend/docs/auth/: bearer.md  login.md  register.md  validate.md
backend/docs/date-idea/: add_tag.md  all.md  create.md  delete.md  id.md  random.md  remove_tag.md  update.md
backend/docs/tag/: all.md  create.md  delete.md  id.md  update.md
backend/docs/token/: renew.md
backend/docs/user/: all.md  delete.md  id.md  update.md
backend/src/: config.rs  main.rs
backend/src/controllers/: alphabet_controller.rs  auth_controller.rs  date_idea_controller.rs  mod.rs  tag_controller.rs  token_controller.rs  user_controller.rs
backend/src/database/: config.rs  connection.rs  db_helper.rs  mod.rs  query_builder.rs
backend/src/domain/: date_idea.rs  date_idea_dto.rs  date_idea_update.rs  err_response.rs  id_object.rs  mod.rs  ok_response.rs  tag.rs  tag_dto.rs  tag_update.rs  token.rs  token_response.rs  user.rs  user_auth.rs  user_dto.rs  user_login.rs  user_register.rs  user_update.rs
backend/src/middlewares/: authorize_middleware.rs  bad_request_middleware.rs  mod.rs
backend/src/repository/: alphabet_ref_repository.rs  alphabet_repository.rs  base_repository.rs  date_idea_repository.rs  date_idea_tag_ref_repository.rs  date_idea_tag_repository.rs  mod.rs  tag_repository.rs  user_date_repository.rs  user_repository.rs
backend/src/router/: mod.rs
(+271 files in other folders)
