[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
uuid = { version = "1.10.0", features = ["fast-rng", "v4", "macro-diagnostics"] }
