[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
surrealdb = "1.5.4"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4", "macro-diagnostics"] }
