[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
surrealdb = "2.0.1"
